Update OpenAPI, add closing endpoints
